--- a/styles.css
+++ b/styles.css
@@ -463,6 +463,7 @@ body {
     text-align: start;
 }
 
+
 .call__left {
     height: 100%;
     display: flex;
@@ -500,10 +501,15 @@ body {
     border-radius: 20px;
     height: 100%;
     width: 100%;
+    transition: var(--transition);
 }
 
 .footer__1 h5 {
     text-align: start;
+}
+
+#lets-go:hover {
+    background: var(--secondary);
 }
 
 
@@ -692,12 +698,12 @@ p {
 
 
     .huge {
-        font-size: 2.369rem;
+        font-size: 1.5rem;
     }
 
     .second__content {
-        font-size: 1.33rem;
-        width: 80%;
+        font-size: 1rem;
+        width: 100%;
         margin-bottom: 1.5rem;
     }
 
