--- a/styles.css
+++ b/styles.css
@@ -282,7 +282,7 @@ body {
 .container {
     width: 90%;
     max-width: 1500px;
-    /* margin: 0 auto; */
+    margin: 0 auto;
 }
 
 .intro {
@@ -449,9 +449,8 @@ body {
 .call__card {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* min-height: 596px; */
+    min-height: 596px;
     background: linear-gradient(267.74deg, #280E58 0.37%, rgba(40, 14, 88, 0) 165.62%);
-    filter: drop-shadow(0px 100px 80px rgba(0, 0, 0, 0.07)) drop-shadow(0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198)) drop-shadow(0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275)) drop-shadow(0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035)) drop-shadow(0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725)) drop-shadow(0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802));
     border-radius: 100px;
     padding: 4rem 6rem;
 }
