--- a/styles.css
+++ b/styles.css
@@ -564,6 +564,14 @@ p {
   font-size: 1rem;
 }
 
+#six-services {
+  margin-bottom: 0;
+}
+
+.fourth {
+  margin-top: 0;
+}
+
 @media only screen and (max-width: 1500px) {
   .footer {
     padding: 2rem 2rem;
