--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
-* {
+*,
+*::before,
+*:after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html,
+/* html {
+  height: 100%;
+} */
 body {
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 :root {
@@ -152,6 +156,7 @@ section {
   min-height: 500px;
   background-color: var(--black);
   padding: 2rem 0;
+  margin-bottom: 0;
 }
 
 #copyright {
@@ -362,7 +367,7 @@ body {
 
 .services__list {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   align-items: center;
   gap: 4rem;
 }
@@ -564,10 +569,6 @@ p {
   font-size: 1rem;
 }
 
-#six-services {
-  margin-bottom: 0;
-}
-
 .fourth {
   margin-top: 0;
 }
@@ -699,6 +700,10 @@ p {
     display: none;
   }
 
+  .services__list {
+    gap: 3rem;
+  }
+
   #learn-more-service {
     display: flex;
   }
@@ -791,6 +796,10 @@ p {
 
   .accordion__item__body--content h5 {
     font-size: 1rem;
+  }
+
+  .service__content h5 {
+    font-size: 1.125rem;
   }
 }
 
