--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Proxima Nova", sans-serif;
 }
 
 /* html {
@@ -79,6 +80,27 @@ body {
 
 .hamburger {
   display: none;
+}
+
+.mobile-nav a:nth-child(5) {
+  margin-bottom: 0;
+}
+
+.hamburger span:nth-child(3) {
+  margin-bottom: 0;
+}
+
+.hamburger.is-active span:nth-child(1) {
+  transform: translate(0px, -1px) rotate(45deg);
+}
+
+.hamburger.is-active span:nth-child(2) {
+  opacity: 0;
+  transform: translateX(15px);
+}
+
+.hamburger.is-active span:nth-child(3) {
+  transform: translate(-3px, -3px) rotate(-45deg);
 }
 
 section {
@@ -426,6 +448,10 @@ body {
   border-radius: 10px;
 }
 
+.second {
+  margin-top: 0rem;
+}
+
 .accordion h4,
 .accordion h5 {
   font-weight: 400;
@@ -532,12 +558,38 @@ body {
   text-align: start;
 }
 
-/* #lets-go:hover {
-    background: var(--secondary);
-} */
+#lets-go {
+  cursor: pointer;
+  transition: 1.5s ease-in-out;
+}
 
-call__to__action {
-  z-index: 99;
+#lets-go:hover {
+  background: var(--secondary);
+}
+
+.mobile-nav {
+  display: none;
+  text-align: center;
+}
+
+.mobile-nav.is-active {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mobile-nav a {
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+  color: white;
+}
+
+#contact {
+  transition: var(--transition);
+}
+
+#contact:hover {
+  color: var(--secondary);
 }
 
 h1 {
@@ -638,13 +690,33 @@ p {
     margin-bottom: 9px;
     position: relative;
 
-    background-color: var(--secondary);
+    background-color: white;
     border-radius: 6px;
     z-index: 1;
 
     transform-origin: 0 0;
 
     transition: 0.4s;
+  }
+
+  .group {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 99;
+    align-items: center;
+    background-color: rgba(24, 24, 24, 0.7);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    padding: 1.5rem 1rem;
+    transition: transform 0.2s;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .second {
+    margin-top: 10rem;
   }
 
   .hamburger span:nth-child(3) {
@@ -657,6 +729,37 @@ p {
 
   .call__left h4 {
     text-align: center;
+  }
+
+  #home:hover {
+    color: white;
+  }
+  #about:hover {
+    color: white;
+  }
+  #our-work:hover {
+    color: white;
+  }
+  #services:hover {
+    color: white;
+  }
+  #contact:hover {
+    color: white;
+  }
+}
+
+@media (hover: hover) and (pointer: fine) and (max-width: 935px) {
+  .hamburger:hover span {
+    background-color: var(--secondary);
+  }
+
+  .hamburger.is-active:hover span {
+    background-color: var(--secondary);
+  }
+
+  .hamburger:hover span:nth-child(2) {
+    transform: translateX(10px);
+    background-color: var(--secondary);
   }
 }
 
