--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,10 @@ section {
   margin-bottom: 4rem;
 }
 
+.second {
+  margin-top: 2rem;
+}
+
 .swiper {
   width: 275px;
   height: 362px;
@@ -223,6 +227,10 @@ h5 {
 
 ul li a {
   transition: var(--transition);
+}
+
+#home {
+  color: var(--secondary);
 }
 
 #home:hover,
@@ -448,8 +456,8 @@ body {
   border-radius: 10px;
 }
 
-.second {
-  margin-top: 0rem;
+.header {
+  margin-bottom: 0rem;
 }
 
 .accordion h4,
@@ -715,8 +723,8 @@ p {
     border-bottom-right-radius: 10px;
   }
 
-  .second {
-    margin-top: 8rem;
+  .header {
+    margin-bottom: 8rem;
   }
 
   .hamburger span:nth-child(3) {
