--- a/contact.css
+++ b/contact.css
@@ -70,6 +70,8 @@
   position: absolute;
   top: 0;
   right: 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .form__grid {
