--- a/styles.css
+++ b/styles.css
@@ -349,6 +349,71 @@ body {
   margin-bottom: 6.5rem;
 }
 
+.timeline {
+  display: grid;
+  color: var(--black);
+  grid-template-columns: 1fr 3px 1fr;
+}
+
+.timeline h1,
+.timeline h2,
+.timeline h3,
+.timeline h4,
+.timeline h5 {
+  text-align: start;
+}
+
+.timeline__title {
+  margin-bottom: 1rem;
+}
+
+.timeline__paragraph {
+  line-height: 1.2;
+}
+
+.timeline__point {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1rem;
+  height: 1rem;
+  background: var(--black);
+  border-radius: 50%;
+}
+
+.timeline__component--bg {
+  padding: 2em;
+  background: var(--brand-gradient);
+  border-radius: 10px;
+}
+
+.timeline__component--bottom {
+  margin-bottom: 0;
+}
+
+.timeline__point--bottom {
+  top: initial;
+  bottom: 0;
+}
+
+.timeline__component {
+  margin: 0 20px 20px 20px;
+}
+
+.timeline__date--right h5 {
+  text-align: right;
+}
+
+.timeline__middle {
+  position: relative;
+  background: var(--black);
+}
+
+.final__component {
+  background: var(--bg--color);
+}
+
 .auto-type {
   color: var(--secondary);
 }
@@ -379,6 +444,10 @@ body {
   display: grid;
   gap: 20%;
   grid-template-columns: 20% 60%;
+}
+
+.fourth__content a {
+  margin-top: 1rem;
 }
 
 .footer__right {
@@ -426,14 +495,6 @@ body {
     rgba(235, 187, 116, 0) 0%,
     #ebbb74 32.58%
   );
-}
-
-.fourth__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 2rem;
-  align-items: center;
 }
 
 #learn-more {
@@ -746,6 +807,14 @@ form i {
     display: none;
   }
 
+  .timeline {
+    grid-template-columns: 1fr;
+  }
+
+  .component__mobile {
+    display: none;
+  }
+
   .call__card {
     border-radius: 25px;
   }
@@ -878,9 +947,9 @@ form i {
     margin-top: 1rem;
   }
 
-  .fourth__content {
+  /* .fourth__content {
     display: none;
-  }
+  } */
 
   .services__list {
     gap: 3rem;
@@ -903,7 +972,7 @@ form i {
 
 @media only screen and (max-width: 640px) {
   .huge {
-    font-size: 2.1rem;
+    font-size: 3rem;
   }
 
   .second__content {
@@ -912,8 +981,17 @@ form i {
     margin-bottom: 1.5rem;
   }
 }
+@media only screen and (max-width: 500px) {
+  .huge {
+    font-size: 2.4rem;
+  }
+}
 
 @media only screen and (max-width: 450px) {
+  .container {
+    width: 95%;
+  }
+
   .card__paragraph h5 {
     font-size: 1rem;
   }
