--- a/styles.css
+++ b/styles.css
@@ -1068,9 +1068,9 @@ form i {
 }
 
 @media only screen and (max-width: 450px) {
-  /* .circle {
+  .circle {
     display: none;
-  } */
+  }
   .container {
     width: 95%;
   }
