--- a/styles.css
+++ b/styles.css
@@ -457,7 +457,8 @@ body {
 .nav-scrolled {
   background: white;
   margin-top: 0;
-  border-radius: 5px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 body {
