--- a/css/about.css
+++ b/css/about.css
@@ -109,6 +109,10 @@
   text-decoration: underline;
 }
 
+.founder__info span {
+  color: var(--error);
+}
+
 @media only screen and (max-width: 1000px) {
   .info__card__wrapper {
     grid-template-columns: repeat(2, 1fr);
